# progsci_book

./: .gitignore  app_application_source.tex  app_compiling_fortran.tex  app_exercises.tex  app_solutions.tex  chapter_application.tex  chapter_fortran.tex  chapter_fortran_parallel.tex  chapter_fortran_projects.tex  chapter_fortran_python.tex  chapter_introduction.tex  chapter_photran.tex  chapter_qtcreator.tex  chapter_references.tex  sciprog.css  sciprog.prj  sciprog.pyg  sciprog.synctex(busy)  sciprog.tex  section_fortran_cmake.tex  section_fortran_documentation.tex  section_fortran_make.tex
exercises/: Matplotlib.ipynb  ex1.py  ex2.py  ex3.py  ex4.py  ex5.md  ex5.py  ex6.py  ex7.py  mainwindow.ui  meanvariance.f90
exercises/mandelbrot/: CMakeLists.txt  mandelmod.f90
exercises/mandelbrot_template/: CMakeLists.txt  DEADJOE  mandelbrot.f90  mandelbrot.py  mandelmod.f90  view_mandelbrot.py
intf2py/: Fortran and F2PY.ipynb
intf2py/.ipynb_checkpoints/: Fortran and F2PY-checkpoint.ipynb
intsrc/: CMakeLists.txt  notes.md  notes_part2.md
intsrc/beam/: stiffness  stiffness.f90
intsrc/compiling/: myexec  mysource.f90
intsrc/ex1/: ex1.f90
intsrc/ex10/: CMakeLists.txt  ex10.f90
intsrc/ex13/: ex13.f90
intsrc/ex14/: ex14.f90
intsrc/ex16/: ex16.f90
intsrc/ex18/: ex18.f90
intsrc/ex19/: CMakeLists.txt  ex19.f90
intsrc/ex2/: ex2.f90
intsrc/ex20/: CMakeLists.txt  ex20.f90
intsrc/ex22/: ex22.f90
intsrc/ex29/: ex29.f90
intsrc/ex3/: ex3.f90
intsrc/ex30/: ex30.f90
intsrc/ex31/: ex31.f90
intsrc/ex32/: ex32.f90
intsrc/ex34/: ex34.f90
intsrc/ex35/: ex35.f90
intsrc/ex36/: ex36.f90
intsrc/ex37/: ex37.f90
intsrc/ex38/: ex38.f90
intsrc/ex39/: ex39.f90
intsrc/ex4/: ex4.f90
intsrc/ex40/: points_a.f90
intsrc/ex6/: ex6.f90
intsrc_templ/: CMakeLists.txt
notes/: photran_notes.txt
source/: CMakeLists.txt  debugging_sample.f90  debugging_sample_correct.f90
source/bouncing_particles/: CMakeLists.txt  clean  configure_build  main.f90  particle.state  particle_data.f90  particle_player.py  particle_sim.f90  particles.py  particles_gui.py  read_part_state.py  test.py
source/bouncing_particles/exercise/: illustration1.odg
source/bouncing_particles/misc/: particles.py
source/bouncing_particles_oo/: CMakeLists.txt  configure  main.f90  particle_sim.f90  particle_sys.f90  vector_operations.f90
(+266 files in other folders)
